<resources>
    <string name="app_name">Food Order</string>

    <string name="nav_main">Trang chính</string>
    <string name="nav_category">Danh mục</string>
    <string name="nav_bill">Hóa đơn</string>
    <string name="nav_statistic">Thống kê</string>
    <string name="nav_user_manager">Cửa hàng</string>
    <string name="nav_profile">Người dùng</string>
    <string name="title_home" />

    <!--    notify-->
    <string name="channel_name">Menu</string>
    <string name="channel_description">Noti when menu update!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
